# Ardunio-Mock

./: .clangd  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml  formatting.yml
docs/: README.md
docs/development/: arduino.md  build.md  examples.md  freertos.md  logging.md  testing.md
examples/: CMakeLists.txt  queue_example.cpp  semaphore_example.cpp  task_example.cpp
makefiles/: development.mk  variables.mk
src/: Arduino.h  Client.h  IPAddress.h  MD5Builder.h
src/freertos/: FreeRTOS.h  FreeRTOSConfig.h  freertos_hooks.c  projdefs.h
src/freertos/queue/: queue.cpp  queue.h
src/freertos/semaphore/: semaphore.cpp  semaphore.h
src/freertos/task/: task.cpp  task.h
test/: CMakeLists.txt  config_assert_gtest.cpp  md5builder_gtest.cpp  queue_gtest.cpp  semaphore_gtest.cpp  stream_gmock_test.cpp  task_gtest.cpp
